--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>paanicare</title>
+    <title>paanicare</title>6
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -257,7 +257,6 @@
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="d-flex flex-column align-items-center text-center bg-white rounded overflow-hidden pt-4">
                             <div class="icon-box bg-light text-secondary shadow mt-2 mb-4">
-                                <!-- <i class="fa fa-2x fa-hotel"></i> -->
                                 <i class="fa fa-2x fa-home"></i>
                             </div>
                             <h5 class="font-weight-bold mb-4 px-4">Doorstep Service</h5>
